[gd_scene load_steps=16 format=2]

[ext_resource path="res://audio/music/song2/red.ogg" type="AudioStream" id=1]
[ext_resource path="res://addons/mixing-desk/music/mdm_icon.png" type="Texture" id=2]
[ext_resource path="res://addons/mixing-desk/music/song_icon.png" type="Texture" id=3]
[ext_resource path="res://addons/mixing-desk/music/song.gd" type="Script" id=4]
[ext_resource path="res://addons/mixing-desk/music/containers/ran_cont.gd" type="Script" id=5]
[ext_resource path="res://addons/mixing-desk/music/containers/core_cont.gd" type="Script" id=6]
[ext_resource path="res://addons/mixing-desk/music/mixing_desk_music.gd" type="Script" id=7]
[ext_resource path="res://audio/music/song1/ranperc_Bonk_2.ogg" type="AudioStream" id=8]
[ext_resource path="res://audio/music/song1/ranperc_Bonk_1.ogg" type="AudioStream" id=9]
[ext_resource path="res://audio/music/song1/ranperc_Clicks.ogg" type="AudioStream" id=10]
[ext_resource path="res://main.gd" type="Script" id=11]
[ext_resource path="res://audio/music/song1/epiano.ogg" type="AudioStream" id=12]
[ext_resource path="res://audio/music/song2/spookpad.ogg" type="AudioStream" id=13]
[ext_resource path="res://audio/music/song1/arp.ogg" type="AudioStream" id=14]
[ext_resource path="res://audio/music/hats/hats.ogg" type="AudioStream" id=15]

[node name="Node2D" type="Node2D"]
script = ExtResource( 11 )

[node name="MixingDeskMusic" type="Node" parent="."]
script = ExtResource( 7 )
__meta__ = {
"_editor_icon": ExtResource( 2 )
}

[node name="test" type="Node" parent="MixingDeskMusic"]
script = ExtResource( 4 )
__meta__ = {
"_editor_icon": ExtResource( 3 )
}
tempo = 120
bars = 4
beats_in_bar = 4
random_chance = 1.0
transition_beats = 2.0
loop = true

[node name="CoreContainer" type="Node" parent="MixingDeskMusic/test"]
script = ExtResource( 6 )
__meta__ = {
"_editor_icon": ExtResource( 3 )
}

[node name="epiano" type="AudioStreamPlayer" parent="MixingDeskMusic/test/CoreContainer"]
stream = ExtResource( 12 )

[node name="arp" type="AudioStreamPlayer" parent="MixingDeskMusic/test/CoreContainer"]
stream = ExtResource( 14 )

[node name="RandomContainer" type="Node" parent="MixingDeskMusic/test"]
script = ExtResource( 5 )
__meta__ = {
"_editor_icon": ExtResource( 3 )
}

[node name="ranperc" type="AudioStreamPlayer" parent="MixingDeskMusic/test/RandomContainer"]
stream = ExtResource( 9 )

[node name="ranperc2" type="AudioStreamPlayer" parent="MixingDeskMusic/test/RandomContainer"]
stream = ExtResource( 8 )

[node name="ranperc3" type="AudioStreamPlayer" parent="MixingDeskMusic/test/RandomContainer"]
stream = ExtResource( 10 )

[node name="test2" type="Node" parent="MixingDeskMusic"]
script = ExtResource( 4 )
__meta__ = {
"_editor_icon": ExtResource( 3 )
}
tempo = 120
bars = 4
beats_in_bar = 4
random_chance = 1.0
transition_beats = 2.0
loop = true

[node name="CoreContainer" type="Node" parent="MixingDeskMusic/test2"]
script = ExtResource( 6 )
__meta__ = {
"_editor_icon": ExtResource( 3 )
}

[node name="epiano" type="AudioStreamPlayer" parent="MixingDeskMusic/test2/CoreContainer"]
stream = ExtResource( 1 )

[node name="pad" type="AudioStreamPlayer" parent="MixingDeskMusic/test2/CoreContainer"]
stream = ExtResource( 13 )

[node name="RandomContainer" type="Node" parent="MixingDeskMusic/test2"]
script = ExtResource( 5 )
__meta__ = {
"_editor_icon": ExtResource( 3 )
}

[node name="ranperc" type="AudioStreamPlayer" parent="MixingDeskMusic/test2/RandomContainer"]
stream = ExtResource( 9 )

[node name="ranperc2" type="AudioStreamPlayer" parent="MixingDeskMusic/test2/RandomContainer"]
stream = ExtResource( 8 )

[node name="ranperc3" type="AudioStreamPlayer" parent="MixingDeskMusic/test2/RandomContainer"]
stream = ExtResource( 10 )

[node name="test3" type="Node" parent="MixingDeskMusic"]
script = ExtResource( 4 )
tempo = 120
bars = 1
beats_in_bar = 4

[node name="CoreContainer" type="Node" parent="MixingDeskMusic/test3"]
script = ExtResource( 6 )
__meta__ = {
"_editor_icon": ExtResource( 3 )
}

[node name="hats" type="AudioStreamPlayer" parent="MixingDeskMusic/test3/CoreContainer"]
stream = ExtResource( 15 )

[node name="song1 but" type="Button" parent="."]
margin_left = 97.0
margin_top = 247.0
margin_right = 351.0
margin_bottom = 309.0
text = "song 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="track1" type="Button" parent="song1 but"]
margin_left = 8.0
margin_top = 104.0
margin_right = 103.0
margin_bottom = 166.0
text = "track 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="track2" type="Button" parent="song1 but"]
margin_left = 147.0
margin_top = 104.0
margin_right = 242.0
margin_bottom = 166.0
text = "track 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="song2 but" type="Button" parent="."]
margin_left = 610.0
margin_top = 242.0
margin_right = 864.0
margin_bottom = 304.0
text = "song 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="track1" type="Button" parent="song2 but"]
margin_left = 12.0
margin_top = 116.0
margin_right = 107.0
margin_bottom = 178.0
text = "track 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="track2" type="Button" parent="song2 but"]
margin_left = 151.0
margin_top = 116.0
margin_right = 246.0
margin_bottom = 178.0
text = "track 2"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="song1 but" to="." method="_on_song1_but_pressed"]
[connection signal="pressed" from="song1 but/track1" to="." method="_on_track1_pressed"]
[connection signal="pressed" from="song1 but/track2" to="." method="_on_track2_pressed"]
[connection signal="pressed" from="song2 but" to="." method="_on_song2_but_pressed"]
[connection signal="pressed" from="song2 but/track1" to="." method="_on_track3_pressed"]
[connection signal="pressed" from="song2 but/track2" to="." method="_on_track4_pressed"]
